<resources>
    <string name="app_name">GameMaker</string>
    <string name="newGameIntroText">Enter a name for your game, and select the type.</string>
    <string name="gameName">Game Name</string>
    <string name="newGameSaveButtonText">Continue</string>
    <string name="gameDescriptionSaveButton">Save and Continue</string>
    <string name="SaveButton">Save</string>
    <string name="game_already_exists">A Game with this name already exists. Do you want to overwrite it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_name_for_game">Please choose a name for this game. \"New Game\" is not allowed.</string>
    <string name="btnTextAttributes">Attributes</string>
    <string name="btnTextRaces">Races</string>
    <string name="btnTextClasses">Classes</string>
    <string name="btnTextSkills">Skills</string>
    <string name="btnTextTraits">Traits</string>
    <string name="btnTextFeatures">Features</string>
    <string name="lblListSelectIntro">Select a Characteristic Group to work on</string>
    <string name="dialog_delete_list_item">Do you want to delete the selected item?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="btnAdd">Add</string>
    <string name="lblTextGroup">Group</string>
    <string-array name="GameTypes">
        <item>Fantasy</item>
        <item>Sci-Fi</item>
        <item>Military</item>
        <item>Mixed</item>
    </string-array>
    <string-array name="AttCreationMethods">
        <item>Straight Dice</item>
        <item>Dice minus Lowest Roll</item>
        <item>Point Assignment</item>
        <item>Base Points</item>
        <item>Dice + Base</item>
        <item>Dice + Point Assignment</item>
        <item>Base + Point Assignment</item>

    </string-array>
    <string-array name="HealthCreationMethods">
        <item>Dice Roll</item>
        <item>Attribute</item>
        <item>Accessory</item>
    </string-array>
    <string-array name="AdvancementMethods">
        <item>Character Levels</item>
        <item>Spending Experience on Abilities</item>
        <item>Event Based or GM Discretion</item>
    </string-array>
    <string name="CharacteristicDescriptionHint">Enter Description</string>
    <string name="GameDescriptionHint">Enter Game Description</string>
    <string name="race_movement_intro_text">Enter the base movement speed for each Movement type.</string>
    <string name="lblWalk">Walking</string>
    <string name="lblRun">Running</string>
    <string name="lblSwim">Swimming</string>
    <string name="lblFly">Flying</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblRace">Race</string>
    <string name="description">Description</string>
    <string name="movement">Movement</string>
    <string name="allowed_classes">Allowed Classes</string>
    <string name="features_possessed">Features Possessed</string>
    <string name="racial_traits">Racial Traits</string>
    <string name="class_traits">Class Traits</string>
    <string name="known_skills">Known Skills</string>
    <string name="attribute_modifiers">Attribute Modifiers</string>
    <string name="base_points">Base Points</string>
    <string name="point_levels">Point Levels</string>
    <string name="minimum_attributes">Minimum Attributes</string>
    <string name="attribute_requirements">Attribute Requirements</string>
    <string name="skills">Skills</string>
    <string name="traits">Traits</string>
    <string name="features">Features</string>
    <string name="class_base_points_instructions">Enter the base points for a newly created character</string>
    <string name="level_points_instructions">Enter the levels needed to gain new points, and the points gained for each Characteristic</string>
    <string name="attributes">Attributes</string>
    <string name="class_text">Class</string>
    <string name="levels_for_skills">Levels for Skills</string>
    <string name="skill_points">Skill Points</string>
    <string name="instructions">Instructions</string>
    <string name="characteristic">Characteristic</string>
    <string name="levels">Levels</string>
    <string name="points">Points</string>
    <string name="edit_name">Edit Name and Type</string>
    <string name="edit_description">Edit Description</string>
    <string name="edit_characteristics">Edit Characteristics</string>
    <string name="attribute_creation">Attribute Creation</string>
    <string name="game">Game</string>
    <string name="game_description">Game Description</string>
    <string name="name">Name</string>
    <string name="straight_dice">Straight Dice</string>
    <string name="dice_minus_lowest_roll">Dice minus lowest roll</string>
    <string name="dice_plus_points">Dice + Points</string>
    <string name="base_plus_dice">Base + Dice</string>
    <string name="assign_points">Points to Assign</string>
    <string name="base_plus_points">Base + Point Assignment</string>
    <string name="base_scores_only">Base Scores Only</string>
    <string name="base_dice_points">Base + Dice + Points</string>
    <string name="select_attribute_creation_method">Select Attribute Creation Method</string>
    <string name="points_available">Points Available:\u0020</string>
    <string name="base_attribute_points">Base Attribute Points:\u0020</string>
    <string name="how_many_sides_per_dice">Dice Sides</string>
    <string name="how_many_rolls">Dice Rolls</string>
    <string name="choose_file">Choose Game to Edit</string>
    <string name="open">Open</string>
    <string name="click_item_to_edit">Click item to edit</string>
    <string name="add">Add</string>
    <string name="level_names">Level Names</string>
    <string name="minimum_points">Minimum Points</string>
    <string name="maximum_points">Maximum Points</string>
    <string name="level">Level</string>
    <string name="class_name">Class</string>
    <string name="races">Races</string>
    <string name="classes">Classes</string>
    <string name="close_text">Close</string>
    <string name="new_game">New Game</string>
    <string name="edit_game">Edit Game</string>
    <string name="delete_game">Delete Game</string>
    <string name="share_game">Share Game</string>
    <string name="select_health_creation_method">Select Health Type Method</string>
    <string name="health_type_creation">Health Type Creation</string>
    <string name="modified_by_characteristics">Modified by Attributes</string>
    <string name="health_creation_modified_text">Using this method, the characters health/damage points will be determined by equipment. Check Modified if this score will be modified by Attribute Scores</string>
    <string name="attributes_for_health">Select Attributes</string>
    <string name="input_modifiers">Input Modifiers</string>
    <string name="health_attribute_multiplier">Attribute Multiplier</string>
    <string name="attribute_additive">Attribute Additive</string>
    <string name="health_dice_sides">Health Dice Sides</string>
    <string name="advancement_method">Advancement Method</string>
    <string name="preferred_classes">Preferred Classes</string>
    <string name="preferred_races">Preferred Races</string>
    <string name="effect_type">Effect Type</string>
    <string name="skill_name">Skill Name</string>
    <string name="adv_method_level_based_text">Use Class Editor to set point gains per Character Level</string>
    <string name="point_cost">Point Cost</string>
    <string name="ability_type">Ability Type</string>
    <string name="preferred_points">Preferred Points</string>
    <string name="non_preferred_penalty">Non-Preferred Penalty</string>
    <string name="cost_multiplier">Cost Multiplier</string>
    <string name="max_level">Max Level</string>
    <string name="info">\?</string>
    <string name="choose_advancement_method">Choose Advancement Method</string>
    <string name="health_creation_dice_message_text">Use the Class Editor section to set health point dice</string>
    <string name="advancement_method_info">Character Levels: Select this method when characters will gain ability points
    or abilities at specific levels of experience gain.\n
        Example:  1000 exp. points = level 2. 2000 = level 3. \n\n

    Spending Experience Points on Abilities:  This method is used when player experience is gained directly as spendable ability points.\n
        Example: Character completes mission, gains one point to spend on skills, and one to spend on traits.
    \n\n

        Event Based:  Choose this method when ability advancement is triggered by in game events, or at the discretion of the Game Master.
    \nExample:  Character picks lock 100 times successfully, pick lock skill advances to next level.
        \nAlternatively, Game Master determines Character has practiced lockpicking sufficiently, and awards an advancement to the skill. \n\n

        Point Cost:  Amount of ability points necessary to gain the initial level of the skill. \n\n

        Non-Preferred Penalty:  Amount of extra points necessary for a non-preferred class or race to gain or advance a skill. Use the Skill
        editor screen to set preferred classes and races.
        If 0, all classes and races will spend the same amount to advance a skill.\n\n

        Cost Multiplier:  Cost to advance an ability or attribute after the initial point.  If zero, all advancement is at the same cost,
        otherwise the new level will cost as many points as the current level times the mulitiplier.
        \n Example:  Multiplier of one will cost three points to go from level three to level four, and four points to go from level four to level five. \n\n

        Max Level:  Sets the highest level abilities can reach.  If zero, abilities will have no upper limit.  If one, they are either
        possessed or not possessed.
    </string>
    <string name="att_creation_info_base">Sets the rules by which Character Attributes will be created.\n\n
    Straight Dice:  Players roll a number of dice, add the results, and the total is the Attribute score.\n\n

    Dice Minus Lowest Roll:  Players roll the number of dice needed to create the Attribute, plus one extra roll,
    add all results and subtract the lowest roll.\n\n

    Point Assignment:  Players are given a set number of points, and assign points to the Attributes until no points remain\n\n

    Base Points: All Attributes start at a base number of points.  Advancement points are gained through experience.\n\n

    Dice + Base:  All Attributes start at a base number of points, and dice results are added to the base for each attribute.\n\n

    Dice + Point Assignment:  Players roll dice for each attribute, and get a number of additional points to assign to the results.\n\n

    Base + Point Assignment:  All Attributes start at a base number, and players get a number of points to assign to attributes
    until no points remain.</string>
    <string name="health_creation_info">Set method for determining how much damage a character can take. \n\n

    Dice Roll:  Player will roll dice to determine character health.  Use the Class editor screens to set Dice sides
    and number of rolls used to determine health.\n\n

    Attribute:  Health is determined by Attribute scores, either a single Attribute or a sum of Attributes.  Select which Attributes
    will be added to the total using the Attribute List.\n\n
    Multiplier:  Sum of Attributes will be multiplied by this number to determine health points.\n\n
    Additive:  This will be added to health score after multiplier is applied.\n\n

    Accessory:  Health will be determined by equipment/accessories in game.\n
    Example:  A space opera where play always takes place in a ship would use ship\'s armor and shield ratings to determine how
    much damage the player could take.\n
    Use Attribute list if Attributes will modify the health rating in this case.</string>
</resources>