<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragRaceEditorControlBar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblRace"
            android:textSize="28sp"
            android:id="@+id/lblRaceName"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/description"
            android:textSize="24sp"
            android:id="@+id/btnEditRaceDescription"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/movement"
            android:textSize="24sp"
            android:id="@+id/btnEditRaceMovement"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/allowed_classes"
            android:textSize="24sp"
            android:id="@+id/btnEditAllowedClasses"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/features_possessed"
            android:textSize="24sp"
            android:id="@+id/btnEditRaceAutoFeatures"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/racial_traits"
            android:textSize="24sp"
            android:id="@+id/btnEditRaceTraits"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/known_skills"
            android:textSize="24sp"
            android:id="@+id/btnEditRaceKnownSkills"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/attribute_modifiers"
            android:textSize="24sp"
            android:id="@+id/btnEditRaceAttributeMods"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/attribute_requirements"
            android:textSize="24sp"
            android:id="@+id/btnEditRaceAttributeRequirements"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>



</FrameLayout>
