<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bordertest_4"
    tools:context=".FragListSelector">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/lblListSelectIntro"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#020000"
                android:gravity="center"
                android:layout_weight=".1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:gravity="center_vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnTextAttributes"
                    android:id="@+id/btnAttributes"
                    android:layout_weight=".1" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/btnTextRaces"
                    android:id="@+id/btnRaces"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/btnTextClasses"
                    android:id="@+id/btnClasses"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/btnTextSkills"
                    android:id="@+id/btnSkills"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/btnTextTraits"
                    android:id="@+id/btnTraits"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/btnTextFeatures"
                    android:id="@+id/btnFeatures"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

</FrameLayout>
