<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragRaceEditorControlBar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/skill_name"
            android:id="@+id/lblAbilityName"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000000"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/description"
            android:id="@+id/btnEditAbilityDescription"
            android:layout_gravity="center_horizontal"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/preferred_classes"
            android:id="@+id/btnEditAbilityPreferredClasses"
            android:layout_gravity="center_horizontal"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/preferred_races"
            android:id="@+id/btnEditAbilityPreferredRaces"
            android:layout_gravity="center_horizontal"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/effect_type"
            android:id="@+id/btnEditAbilityEffectType"
            android:layout_gravity="center_horizontal"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" />


    </LinearLayout>


</FrameLayout>

