<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragClassEditorStartingPoints">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/lblStartingPointsClassName"
            android:layout_gravity="center_horizontal"
            android:text="@string/class_name"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_base_points_instructions"
            android:id="@+id/lblClassStartingPointsInstructions"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="28sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_dice_sides"
                android:textSize="24sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000000" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/edtHealthDice"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:textSize="24sp"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skills"
                android:textSize="24sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000000" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/edtStartingSkills"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:textSize="24sp"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traits"
                android:id="@+id/lblStartingTraits"
                android:textSize="24sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000000" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/edtStartingTraits"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:textSize="24sp"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/features"
                android:id="@+id/lblStartingFeatures"
                android:textSize="24sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000000" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/edtStartingFeatures"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:textSize="24sp"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSaveStartingPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SaveButton"
            android:textSize="24sp" />

    </LinearLayout>
</FrameLayout>
