<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context="com.johnhaines.boardmonkey.gamemaker.FragListEdit">

    <TextView
        android:id="@+id/lblGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTextGroup"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtAddItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:background="#ffffff"
            android:imeActionId="666"
            android:imeActionLabel="Add"
            android:inputType="textCapWords"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/add"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".2"
        android:gravity="center"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:text="@string/maximum_points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtMaxSkillPoints"
            android:layout_weight="1"
            android:gravity="center"
            android:selectAllOnFocus="true" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05" />

    <TextView
        android:id="@+id/lblClickToEdit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".07"
        android:text="@string/click_item_to_edit"
        android:textColor="#000000"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="normal|bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05" />

    <ListView
        android:id="@+id/lstItemList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:clickable="true" />

    <Button
        android:text="@string/SaveButton"
        android:layout_width="500dp"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_gravity="center"
        android:id="@+id/btnSaveCharList"
        android:textSize="30sp" />

</LinearLayout>

