<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.johnhaines.boardmonkey.gamemaker.FragFilePicker">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_file"
            android:textSize="36sp"
            android:textColor="#000000" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:divider="#000000"
            android:dividerHeight="2dp"
            android:id="@+id/lstFiles" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15">

            <Space
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="match_parent" />

            <Button
                android:text="@string/open"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btnOk"
                android:textSize="30sp" />

            <Space
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="match_parent" />

            <Button
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"
                android:textSize="30sp" />

            <Space
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>


</FrameLayout>
